fix tablet logo spacing

--- a/project/parttofe/partto/src/components/Layout/NavigationBar/NavigationBar.module.scss
+++ b/project/parttofe/partto/src/components/Layout/NavigationBar/NavigationBar.module.scss
@@ -40,6 +40,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--gap-xlarge);
+  @media #{$mobile} {
+    gap: 0;
+  }
   @media #{$tablet} {
     gap: 0;
   }
